--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -228,7 +228,8 @@
                           <i class="fa-solid fa-circle"></i>
                         </span>
                         <span class="iconlist_text">
-                          Business Information: Company name, tax ID, business address, and contact details (email,
+                          <b>Business Information:</b> Company name, tax ID, business address, and contact details
+                          (email,
                           phone number).
                         </span>
                       </li>
@@ -237,15 +238,7 @@
                           <i class="fa-solid fa-circle"></i>
                         </span>
                         <span class="iconlist_text">
-                          Financial Data: Bank account details, payment transaction history, and billing information.
-                        </span>
-                      </li>
-                      <li>
-                        <span class="iconlist_icon text-dark">
-                          <i class="fa-solid fa-circle"></i>
-                        </span>
-                        <span class="iconlist_text">
-                          Transactional Data: Details of international payments, currency conversions, and recipient
+                          <b>Financial Data:</b> Bank account details, payment transaction history, and billing
                           information.
                         </span>
                       </li>
@@ -254,7 +247,18 @@
                           <i class="fa-solid fa-circle"></i>
                         </span>
                         <span class="iconlist_text">
-                          Technical Data: IP address, device information, browser type, and usage patterns (e.g., via
+                          <b>Transactional Data:</b> Details of international payments, currency conversions, and
+                          recipient
+                          information.
+                        </span>
+                      </li>
+                      <li>
+                        <span class="iconlist_icon text-dark">
+                          <i class="fa-solid fa-circle"></i>
+                        </span>
+                        <span class="iconlist_text">
+                          <b>Technical Data:</b> IP address, device information, browser type, and usage patterns (e.g.,
+                          via
                           cookies and analytics tools).
                         </span>
                       </li>
@@ -263,7 +267,7 @@
                           <i class="fa-solid fa-circle"></i>
                         </span>
                         <span class="iconlist_text">
-                          User Credentials: Username, password, and authentication details for Platform access.
+                          <b>User Credentials:</b> Username, password, and authentication details for Platform access.
                         </span>
                       </li>
                     </ul>
@@ -342,34 +346,31 @@
                     <ul class="iconlist_block unordered_list_block">
                       <li>
                         <span class="iconlist_text">
-                          1. Service Providers: Trusted third parties (e.g., banks, payment processors, auditors) who
+                          1. <b>Service Providers:</b> Trusted third parties (e.g., banks, payment processors, auditors)
+                          who
                           assist in delivering our services.
                         </span>
                       </li>
                       <li>
                         <span class="iconlist_text">
-                          2. Legal Compliance: To comply with laws, regulations, or legal requests (e.g., tax
+                          2. <b>Legal Compliance:</b> To comply with laws, regulations, or legal requests (e.g., tax
                           authorities, law enforcement).
                         </span>
                       </li>
                       <li>
                         <span class="iconlist_text">
-                          3. With Your Consent: For purposes explicitly authorized by you.
+                          3. <b>With Your Consent:</b> For purposes explicitly authorized by you.
+                        </span>
+                      </li>
+
+                      <li>
+                        <span class="iconlist_text">
+                          5. <b>Business Transfers:</b> In the event of a merger, acquisition, or sale of assets.
                         </span>
                       </li>
                       <li>
                         <span class="iconlist_text">
-                          4. We do not sell your personal or business data to third parties.
-                        </span>
-                      </li>
-                      <li>
-                        <span class="iconlist_text">
-                          5. Business Transfers: In the event of a merger, acquisition, or sale of assets.
-                        </span>
-                      </li>
-                      <li>
-                        <span class="iconlist_text">
-                          6. With Your Consent: For purposes explicitly authorized by you.
+                          6. <b>With Your Consent:</b> For purposes explicitly authorized by you.
                         </span>
                       </li>
 
@@ -396,7 +397,7 @@
                             <i class="fa-solid fa-circle"></i>
                           </span>
                           <span class="iconlist_text">
-                            Encryption: Data transmitted via the Platform is secured using SSL/TLS encryption.
+                            <b>Encryption:</b> Data transmitted via the Platform is secured using SSL/TLS encryption.
                           </span>
                         </li>
                         <li>
@@ -404,7 +405,8 @@
                             <i class="fa-solid fa-circle"></i>
                           </span>
                           <span class="iconlist_text">
-                            Access Controls: Restricted access to sensitive data based on roles and responsibilities.
+                            <b>Access Controls:</b> Restricted access to sensitive data based on roles and
+                            responsibilities.
                           </span>
                         </li>
                         <li>
@@ -412,7 +414,7 @@
                             <i class="fa-solid fa-circle"></i>
                           </span>
                           <span class="iconlist_text">
-                            Regular Audits: Security assessments to identify and address vulnerabilities.
+                            <b>Regular Audits:</b> Security assessments to identify and address vulnerabilities.
                           </span>
                         </li>
 
@@ -518,17 +520,14 @@
                       For questions, concerns, or requests regarding this Privacy Policy or your data, contact us at:
                     </p>
                     <p>
-                      Phone: +234&nbsp;704&nbsp;888&nbsp;7066, +49&nbsp;179&nbsp;1107305
-                    </p>
-                    <p>
-                      Address: Iyekekpolor No 26, Benin city Edo State.
-                    </p>
+                      <b>Phone</b>: +234&nbsp;704&nbsp;888&nbsp;7066, +49&nbsp;179&nbsp;1107305<br>
+                      <b>Address:</b> Iyekekpolor No 26, Benin city Edo State.
                     </p>
 
                   </div>
 
                   <div style="margin-top: 30px;">
-                    Perryleo is committed to transparency and trust in all our global payment solutions.
+                    <b>Perryleo </b>is committed to transparency and trust in all our global payment solutions.
                   </div>
                 </div>
 
