--- a/about.html
+++ b/about.html
@@ -575,7 +575,7 @@
                   <div class="iconbox_content">
                     <h3 class="iconbox_title">Write to us</h3>
                     <p class="mb-0">
-                      <a href="mailto:finto@synos.com">finto@synos.com</a>
+                      <a href="mailto:finto@synos.com">admin@perryleo.com</a>
                     </p>
                   </div>
                 </div>
@@ -586,9 +586,9 @@
                     <img src="assets/images/icons/icon_calling_5.svg" alt="Icon Calling">
                   </div>
                   <div class="iconbox_content">
-                    <h3 class="iconbox_title"> Call Us (USA)</h3>
+                    <h3 class="iconbox_title"> Call Us (Nigeria, Uk)</h3>
                     <p class="mb-0">
-                      <a href="tel:+(1)12304528597">+(1) 1230 452 8597</a>
+                      <a href="tel:+(1)12304528597">+234&nbsp;704&nbsp;888&nbsp;7066 <br> +49&nbsp;179&nbsp;1107305<br></a>
                     </p>
                   </div>
                 </div>
@@ -601,7 +601,7 @@
                   <div class="iconbox_content">
                     <h3 class="iconbox_title">Our Office</h3>
                     <p class="mb-0">
-                      Waterloo, Park, Australia
+                      Iyekekpolor No 26. Benin city, Edo State
                     </p>
                   </div>
                 </div>
@@ -610,99 +610,7 @@
 
             <hr>
 
-            <div class="row justify-content-lg-between">
-              <div class="col-lg-4">
-                <div class="footer_widget pe-md-3">
-                  <h2 class="footer_info_title">Newsletter</h2>
-                  <p class="pe-lg-5">
-                    Sign up to PerryLeo's weekly newsletter to get the latest updates.
-                  </p>
-                  <form class="footer_newslatter_2" action="#">
-                    <label for="footer_mail_input">
-                      <img src="assets/images/icons/icon_email.svg" alt="Mail SVG Icon">
-                    </label>
-                    <input id="footer_mail_input" type="email" name="email" placeholder="Enter your email">
-                    <button type="submit"><i class="fa-solid fa-paper-plane"></i></button>
-                  </form>
-                  <ul class="social_links_block unordered_list">
-                    <li class="facebook"><a href="#!">Facebook</a></li>
-                    <li class="twitter"><a href="#!">Twitter</a></li>
-                    <li class="linkdin"><a href="#!">Linkdin</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-6 col-sm-6">
-                <h3 class="footer_info_title">Solutions</h3>
-                <ul class="iconlist_block unordered_list_block mb-0">
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Digital & Neobanking</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">B2B Payments</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Growth & Activation</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Cryptocurrency</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Embedded Finance</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Investing</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-3 col-md-6 col-sm-6">
-                <h3 class="footer_info_title">Products</h3>
-                <ul class="iconlist_block unordered_list_block mb-0">
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Cards shorts</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Deposits</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Transfers</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Credit & Lending</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Data & Analytics</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Risk & Compliance</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-
+            
             <hr class="mb-0">
 
             <div class="footer_bottom">
@@ -715,12 +623,12 @@
                 <div class="col-lg-6">
                   <ul class="iconlist_block mb-0 unordered_list justify-content-lg-end">
                     <li>
-                      <a href="#!">
-                        <span class="iconlist_text">Terms & Conditions</span>
+                      <a href="delete_account.html">
+                        <span class="iconlist_text">Delete Account</span>
                       </a>
                     </li>
                     <li>
-                      <a href="#!">
+                      <a href="privacy_policy.html">
                         <span class="iconlist_text">Privacy Policy</span>
                       </a>
                     </li>
