--- a/delete_account.html
+++ b/delete_account.html
@@ -477,193 +477,99 @@
 
         <!-- Site Footer - Start
       ================================================== -->
-        <footer class="site_footer footer_layout_2 bg-secondary section_decoration section_space"
-            style="background-image: url('assets/images/backgrounds/hero_bg_noise.webp');">
-            <div class="overlay" style="background-image: url('assets/images/hero/hero_pattern.svg');"></div>
-            <div class="container">
-                <div class="content_wrap pb-0">
-                    <div class="contact_info row">
-                        <div class="col-lg-4">
-                            <div class="iconbox_block icon_left">
-                                <div class="iconbox_icon">
-                                    <img src="assets/images/icons/icon_email.svg" alt="Icon Email">
-                                </div>
-                                <div class="iconbox_content">
-                                    <h3 class="iconbox_title">Write to us</h3>
-                                    <p class="mb-0">
-                                        <a href="mailto:finto@synos.com">finto@synos.com</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="iconbox_block icon_left">
-                                <div class="iconbox_icon">
-                                    <img src="assets/images/icons/icon_calling_5.svg" alt="Icon Calling">
-                                </div>
-                                <div class="iconbox_content">
-                                    <h3 class="iconbox_title"> Call Us (USA)</h3>
-                                    <p class="mb-0">
-                                        <a href="tel:+(1)12304528597">+(1) 1230 452 8597</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="iconbox_block icon_left">
-                                <div class="iconbox_icon">
-                                    <img src="assets/images/icons/icon_map_mark.svg" alt="Icon Map Mark">
-                                </div>
-                                <div class="iconbox_content">
-                                    <h3 class="iconbox_title">Our Office</h3>
-                                    <p class="mb-0">
-                                        Waterloo, Park, Australia
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <hr>
-
-                    <div class="row justify-content-lg-between">
-                        <div class="col-lg-4">
-                            <div class="footer_widget pe-md-3">
-                                <h2 class="footer_info_title">Newsletter</h2>
-                                <p class="pe-lg-5">
-                                    Sign up to PerryLeo's weekly newsletter to get the latest updates.
-                                </p>
-                                <form class="footer_newslatter_2" action="#">
-                                    <label for="footer_mail_input">
-                                        <img src="assets/images/icons/icon_email.svg" alt="Mail SVG Icon">
-                                    </label>
-                                    <input id="footer_mail_input" type="email" name="email"
-                                        placeholder="Enter your email">
-                                    <button type="submit"><i class="fa-solid fa-paper-plane"></i></button>
-                                </form>
-                                <ul class="social_links_block unordered_list">
-                                    <li class="facebook"><a href="#!">Facebook</a></li>
-                                    <li class="twitter"><a href="#!">Twitter</a></li>
-                                    <li class="linkdin"><a href="#!">Linkdin</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6">
-                            <h3 class="footer_info_title">Solutions</h3>
-                            <ul class="iconlist_block unordered_list_block mb-0">
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Digital & Neobanking</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">B2B Payments</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Growth & Activation</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Cryptocurrency</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Embedded Finance</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Investing</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6">
-                            <h3 class="footer_info_title">Products</h3>
-                            <ul class="iconlist_block unordered_list_block mb-0">
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Cards shorts</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Deposits</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Transfers</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Credit & Lending</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Data & Analytics</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#!">
-                                        <span class="iconlist_text">Risk & Compliance</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <hr class="mb-0">
-
-                    <div class="footer_bottom">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <p class="copyright_text mb-0">
-                                    Copyright © 2024 PerryLeo, All rights reserved.
-                                </p>
-                            </div>
-                            <div class="col-lg-6">
-                                <ul class="iconlist_block mb-0 unordered_list justify-content-lg-end">
-                                    <li>
-                                        <a href="#!">
-                                            <span class="iconlist_text">Terms & Conditions</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#!">
-                                            <span class="iconlist_text">Privacy Policy</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+      <footer class="site_footer footer_layout_2 bg-secondary section_decoration section_space" style="background-image: url('assets/images/backgrounds/hero_bg_noise.webp');">
+        <div class="overlay" style="background-image: url('assets/images/hero/hero_pattern.svg');"></div>
+        <div class="container">
+          <div class="content_wrap pb-0">
+            <div class="contact_info row">
+              <div class="col-lg-4">
+                <div class="iconbox_block icon_left">
+                  <div class="iconbox_icon">
+                    <img src="assets/images/icons/icon_email.svg" alt="Icon Email">
+                  </div>
+                  <div class="iconbox_content">
+                    <h3 class="iconbox_title">Write to us</h3>
+                    <p class="mb-0">
+                      <a href="mailto:finto@synos.com">admin@perryleo.com</a>
+                    </p>
+                  </div>
                 </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="iconbox_block icon_left">
+                  <div class="iconbox_icon">
+                    <img src="assets/images/icons/icon_calling_5.svg" alt="Icon Calling">
+                  </div>
+                  <div class="iconbox_content">
+                    <h3 class="iconbox_title"> Call Us (Nigeria, Uk)</h3>
+                    <p class="mb-0">
+                      <a href="tel:+(1)12304528597">+234&nbsp;704&nbsp;888&nbsp;7066 <br> +49&nbsp;179&nbsp;1107305<br></a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="iconbox_block icon_left">
+                  <div class="iconbox_icon">
+                    <img src="assets/images/icons/icon_map_mark.svg" alt="Icon Map Mark">
+                  </div>
+                  <div class="iconbox_content">
+                    <h3 class="iconbox_title">Our Office</h3>
+                    <p class="mb-0">
+                      Iyekekpolor No 26. Benin city, Edo State
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
 
-            <div class="decoration_item shape_shadow_1">
-                <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 1">
+            <hr>
+
+            
+            <hr class="mb-0">
+
+            <div class="footer_bottom">
+              <div class="row">
+                <div class="col-lg-6">
+                  <p class="copyright_text mb-0">
+                    Copyright © 2024 PerryLeo, All rights reserved.
+                  </p>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="iconlist_block mb-0 unordered_list justify-content-lg-end">
+                    <li>
+                      <a href="delete_account.html">
+                        <span class="iconlist_text">Delete Account</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="privacy_policy.html">
+                        <span class="iconlist_text">Privacy Policy</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
-            <div class="decoration_item shape_shadow_2">
-                <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 2">
-            </div>
-            <div class="decoration_item shape_shadow_3">
-                <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 3">
-            </div>
-            <div class="decoration_item shape_shadow_4">
-                <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 4">
-            </div>
-            <div class="decoration_item shape_shadow_5">
-                <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 5">
-            </div>
-        </footer>
+          </div>
+        </div>
+        
+        <div class="decoration_item shape_shadow_1">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 1">
+        </div>
+        <div class="decoration_item shape_shadow_2">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 2">
+        </div>
+        <div class="decoration_item shape_shadow_3">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 3">
+        </div>
+        <div class="decoration_item shape_shadow_4">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 4">
+        </div>
+        <div class="decoration_item shape_shadow_5">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 5">
+        </div>
+      </footer>
         <!-- Site Footer - End
       ================================================== -->
 
