--- a/service_details.html
+++ b/service_details.html
@@ -344,182 +344,97 @@
 
       <!-- Site Footer - Start
       ================================================== -->
-      <footer class="site_footer footer_layout_1 bg-dark section_decoration">
+      <footer class="site_footer footer_layout_2 bg-secondary section_decoration section_space" style="background-image: url('assets/images/backgrounds/hero_bg_noise.webp');">
+        <div class="overlay" style="background-image: url('assets/images/hero/hero_pattern.svg');"></div>
         <div class="container">
-          <div class="footer_newsletter pb-0">
-            <div class="row align-items-center justify-content-lg-between">
-              <div class="col-lg-6">
-                <div class="heading_block mb-0 text-white">
-                  <h2 class="heading_text mb-0">
-                    Subscribe for daily update
-                  </h2>
+          <div class="content_wrap pb-0">
+            <div class="contact_info row">
+              <div class="col-lg-4">
+                <div class="iconbox_block icon_left">
+                  <div class="iconbox_icon">
+                    <img src="assets/images/icons/icon_email.svg" alt="Icon Email">
+                  </div>
+                  <div class="iconbox_content">
+                    <h3 class="iconbox_title">Write to us</h3>
+                    <p class="mb-0">
+                      <a href="mailto:finto@synos.com">admin@perryleo.com</a>
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-4">
-                <form class="newsletter_input" action="#">
-                  <label for="footer_newsletter_input">
-                    <img src="assets/images/icons/icon_email.svg" alt="Icon Email">
-                  </label>
-                  <input id="footer_newsletter_input" type="email" name="email" placeholder="Email address">
-                  <button class="submit_btn" type="submit">
-                    <i class="fa-solid fa-paper-plane"></i>
-                  </button>
-                </form>
-              </div>
-            </div>
-          </div>
-
-          <div class="footer_content_wrapper">
-            <div class="row">
-              <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="site_logo">
-                  <a class="site_link" href="index.html">
-                    <img src="assets/images/site_logo/site_logo_white.svg" alt="Site Logo">
-                  </a>
+                <div class="iconbox_block icon_left">
+                  <div class="iconbox_icon">
+                    <img src="assets/images/icons/icon_calling_5.svg" alt="Icon Calling">
+                  </div>
+                  <div class="iconbox_content">
+                    <h3 class="iconbox_title"> Call Us (Nigeria, Uk)</h3>
+                    <p class="mb-0">
+                      <a href="tel:+(1)12304528597">+234&nbsp;704&nbsp;888&nbsp;7066 <br> +49&nbsp;179&nbsp;1107305<br></a>
+                    </p>
+                  </div>
                 </div>
-                <ul class="iconlist_block unordered_list_block">
-                  <li>
-                    <a href="tel:+112304528759">
-                      <span class="iconlist_icon">
-                        <img src="assets/images/icons/icon_calling_2.svg" alt="Icon Calling">
-                      </span>
-                      <span class="iconlist_text">+(1) 1230 452 8759</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="mailto:synox@mail.com">
-                      <span class="iconlist_icon">
-                        <img src="assets/images/icons/icon_email_2.svg" alt="Icon Email">
-                      </span>
-                      <span class="iconlist_text">synox@mail.com</span>
-                    </a>
-                  </li>
-                </ul>
-                <p class="mb-0 pe-lg-5">
-                  Waterloo, Macquarie Park NSW 2113, Australia
-                </p>
               </div>
-              <div class="col-lg-3 col-md-6 col-sm-6 pe-lg-5">
-                <h3 class="footer_info_title">Quick LInk</h3>
-                <ul class="iconlist_block unordered_list_block">
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Gold Investment</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Property Investment</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Gold Investment</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Product Salute</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Digital Investment</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-3 col-md-6 col-sm-6 pe-lg-5">
-                <h3 class="footer_info_title">Information</h3>
-                <ul class="iconlist_block unordered_list_block">
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Career</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Privacy Policy</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Terms & condition</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Refund & News</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#!">
-                      <span class="iconlist_text">Awards & Partners</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-3 col-md-6 col-sm-6 pe-lg-5">
-                <h3 class="footer_info_title">Download App</h3>
-                <p class="pe-lg-5">
-                  Available in any kind of ready version
-                </p>
-                <ul class="app_download_btns unordered_list_block">
-                  <li>
-                    <a href="#">
-                      <img src="assets/images/app_store.webp" alt="App Store">
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="assets/images/google_play.webp" alt="Google Play">
-                    </a>
-                  </li>
-                </ul>
+              <div class="col-lg-4">
+                <div class="iconbox_block icon_left">
+                  <div class="iconbox_icon">
+                    <img src="assets/images/icons/icon_map_mark.svg" alt="Icon Map Mark">
+                  </div>
+                  <div class="iconbox_content">
+                    <h3 class="iconbox_title">Our Office</h3>
+                    <p class="mb-0">
+                      Iyekekpolor No 26. Benin city, Edo State
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="footer_bottom">
-            <div class="row">
-              <div class="col-md-6">
-                <p class="copyright_text mb-0 text-white">
-                  Copyright © 2024 Synox, All rights reserved.
-                </p>
-              </div>
-              <div class="col-md-6">
-                <div class="d-flex align-items-center justify-content-center justify-content-md-end">
-                  <p class="mb-0 text-white">Follow Us -</p>
-                  <ul class="social_icons_block unordered_list ms-3">
+            <hr>
+
+            
+            <hr class="mb-0">
+
+            <div class="footer_bottom">
+              <div class="row">
+                <div class="col-lg-6">
+                  <p class="copyright_text mb-0">
+                    Copyright © 2024 PerryLeo, All rights reserved.
+                  </p>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="iconlist_block mb-0 unordered_list justify-content-lg-end">
                     <li>
-                      <a aria-label="Twitter X" href="#!">
-                        <svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M8.92704 6.35148L14.5111 0H13.1879L8.33921 5.5149L4.4666 0H0L5.85615 8.3395L0 15H1.32333L6.44364 9.17608L10.5334 15H15L8.92671 6.35148H8.92704ZM7.11456 8.41297L6.52121 7.58255L1.80014 0.974755H3.83269L7.64265 6.30746L8.236 7.13788L13.1885 14.0696H11.156L7.11456 8.41329V8.41297Z"/>
-                        </svg>
+                      <a href="delete_account.html">
+                        <span class="iconlist_text">Delete Account</span>
                       </a>
                     </li>
-                    <li><a aria-label="Facebook" href="#!"><i class="fa-brands fa-facebook-f"></i></a></li>
-                    <li><a aria-label="Linkedin" href="#!"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li>
+                      <a href="privacy_policy.html">
+                        <span class="iconlist_text">Privacy Policy</span>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="decoration_item shape_finto">
-          <img src="assets/images/shapes/shape_finto.svg" alt="Shape Finto">
+        
+        <div class="decoration_item shape_shadow_1">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 1">
         </div>
-        <div class="decoration_item shape_finto">
-          <img src="assets/images/shapes/shape_finto.svg" alt="Shape Finto">
+        <div class="decoration_item shape_shadow_2">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 2">
         </div>
-        <div class="decoration_item shape_nate">
-          <img src="assets/images/shapes/shape_nate_2.svg" alt="Shape Nate">
+        <div class="decoration_item shape_shadow_3">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 3">
         </div>
-        <div class="decoration_item shape_dollar_1">
-          <img src="assets/images/shapes/shape_dollar_5.webp" data-parallax='{"y" : 100, "smoothness": 10}' alt="Shape Nate">
+        <div class="decoration_item shape_shadow_4">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 4">
         </div>
-        <div class="decoration_item shape_dollar_2">
-          <img src="assets/images/shapes/shape_dollar_3.webp" data-parallax='{"y" : -100, "smoothness": 10}' alt="Shape Nate">
+        <div class="decoration_item shape_shadow_5">
+          <img src="assets/images/shapes/shape_circle_2.svg" alt="Shape Shadow 5">
         </div>
       </footer>
       <!-- Site Footer - End
