--- a/index.html
+++ b/index.html
@@ -230,7 +230,11 @@
                     <div id="toDropdown" class="dropdown-content"></div>
                   </div>
 
-                  <button type="button" onclick="convertCurrency()">Convert</button>
+                  <button type="button" onclick="convertCurrency()" id="convertBtn">
+                    <span class="btn-text">Convert</span>
+                    <div class="spinner"></div>
+                  </button>
+                  <!-- <button type="button" onclick="convertCurrency()">Convert</button> -->
                 </form>
 
                 <div id="result"></div>
