--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="thumbnail" content="assets/images/synox_page_thumbnail.webp">
-    <meta name="description" content="Synox – Finance & Consulting Site Template.">
-    <meta name="keywords" content="Finance & Consulting Bootstrap Site Template">
-    <meta name="author" content="XpressBuddy">
+    <meta name="thumbnail" content="assets/images/perryleo-logo.png">
+    <meta name="description" content="PerryLeo – Finance & Consulting Site.">
+    <meta name="keywords" content="Seamless Global Money Transfers and online payment">
+    <meta name="author" content="djeffsource">
 
     <title>Online Banking – PerryLeo – Breaking borders, one payment at a time.</title>
     <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
@@ -332,15 +332,16 @@
                         <span class="iconlist_icon">
                           <img src="assets/images/icons/icon_calling_3.svg" alt="Icon Calling">
                         </span>
-                        <span class="iconlist_text">+88 (0) 101 0000 000</span>
+                        <span class="iconlist_text">+234&nbsp;704&nbsp;888&nbsp;7066
+                          +49&nbsp;179&nbsp;1107305</span>
                       </a>
                     </li>
                     <li>
-                      <a href="mailto:synox@examplemail.com">
+                      <a href="mailto:admin@perryleo.com">
                         <span class="iconlist_icon">
                           <img src="assets/images/icons/icon_email_3.svg" alt="Icon Email">
                         </span>
-                        <span class="iconlist_text">synox@examplemail.com</span>
+                        <span class="iconlist_text">admin@perryleo.com</span>
                       </a>
                     </li>
                   </ul>
@@ -359,22 +360,18 @@
                   <ul class="office_location iconlist_block unordered_list_block mb-0">
                     <li>
                       <span class="iconlist_text">
-                        <strong class="text-dark d-block">United states office:</strong> Sunshine Business park, Floor No 05A,Sector-94,
+                        <strong class="text-dark d-block">office Address:</strong> Iyekekpolor No 26. Benin city, Edo State
                       </span>
                     </li>
-                    <li>
-                      <span class="iconlist_text">
-                        <strong class="text-dark d-block">United kingdom office:</strong> 12 Buckingham Rd, thorn Thwaite, HG3 4 TY, UK Contact
-                      </span>
-                    </li>
+                    
                   </ul>
                   <hr>
                   <ul class="iconlist_block unordered_list_block mb-0">
-                    <li>
+                    <!-- <li>
                       <span class="iconlist_text">
-                        <strong class="text-dark d-block">Our Office Ppen Time:</strong> Mon - Sat : 8.00-5.00 <mark class="d-block text-danger">Sunday : Closed</mark>
+                        <strong class="text-dark d-block">Our Office Open Time:</strong> Mon - Sat : 8.00-5.00 <mark class="d-block text-danger">Sunday : Closed</mark>
                       </span>
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
               </div>
@@ -453,7 +450,7 @@
               <div class="row">
                 <div class="col-lg-6">
                   <p class="copyright_text mb-0">
-                    Copyright © 2024 PerryLeo, All rights reserved.
+                    Copyright © 2025 PerryLeo, All rights reserved.
                   </p>
                 </div>
                 <div class="col-lg-6">
