--- a/error.html
+++ b/error.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="thumbnail" content="assets/images/synox_page_thumbnail.webp">
-    <meta name="description" content="Synox – Finance & Consulting Site Template.">
-    <meta name="keywords" content="Finance & Consulting Bootstrap Site Template">
-    <meta name="author" content="XpressBuddy">
+    <meta name="thumbnail" content="assets/images/perryleo-logo.png">
+    <meta name="description" content="PerryLeo – Finance & Consulting Site.">
+    <meta name="keywords" content="Seamless Global Money Transfers and online payment">
+    <meta name="author" content="djeffsource">
 
-    <title>404 – Synox – Finance & Consulting Site Template.</title>
-    <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
+    <title>Online Banking – PerryLeo – Breaking borders, one payment at a time.</title>
+  <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
 
     <!-- Fraimwork - CSS Include -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
