--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="thumbnail" content="assets/images/synox_page_thumbnail.webp">
-  <meta name="description" content="PerryLeo – Finance & Consulting Site Template.">
-  <meta name="keywords" content="Finance & Consulting Bootstrap Site Template">
-  <meta name="author" content="XpressBuddy">
+  <meta name="thumbnail" content="assets/images/perryleo-logo.png">
+  <meta name="description" content="PerryLeo – Finance & Consulting Site.">
+  <meta name="keywords" content="Seamless Global Money Transfers and online payment">
+  <meta name="author" content="djeffsource">
 
   <title>Online Banking – PerryLeo – Breaking borders, one payment at a time.</title>
   <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
@@ -217,8 +217,8 @@
                 <form id="converter-form" onsubmit="event.preventDefault()">
                   <label for="fromCurrency">From:</label>
                   <div class="custom-dropdown">
-                    <button id="fromButton" class="dropdown-btn">Select Currency</button>
-                    <div id="fromDropdown" class="dropdown-content"></div>
+                    <button id="toButton" class="dropdown-btn">Select Currency</button>
+                    <div id="toDropdown" class="dropdown-content"></div>
                   </div>
 
                   <label for="amount">Amount:</label>
@@ -226,8 +226,8 @@
 
                   <label for="toCurrency">To:</label>
                   <div class="custom-dropdown">
-                    <button id="toButton" class="dropdown-btn">Select Currency</button>
-                    <div id="toDropdown" class="dropdown-content"></div>
+                    <button id="fromButton" class="dropdown-btn">Select Currency</button>
+                    <div id="fromDropdown" class="dropdown-content"></div>
                   </div>
 
                   <button type="button" onclick="convertCurrency()" id="convertBtn">
@@ -1360,7 +1360,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <p class="copyright_text mb-0">
-                  Copyright © 2024 PerryLeo, All rights reserved.
+                  Copyright © 2025 PerryLeo, All rights reserved.
                 </p>
               </div>
               <div class="col-lg-6">
