--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="thumbnail" content="assets/images/synox_page_thumbnail.webp">
-  <meta name="description" content="Synox – Finance & Consulting Site Template.">
-  <meta name="keywords" content="Finance & Consulting Bootstrap Site Template">
-  <meta name="author" content="XpressBuddy">
+  <meta name="thumbnail" content="assets/images/perryleo-logo.png">
+  <meta name="description" content="PerryLeo – Finance & Consulting Site.">
+  <meta name="keywords" content="Seamless Global Money Transfers and online payment">
+  <meta name="author" content="djeffsource">
 
   <title>Online Banking – PerryLeo – Breaking borders, one payment at a time.</title>
   <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
@@ -604,7 +604,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <p class="copyright_text mb-0">
-                  Copyright © 2024 PerryLeo, All rights reserved.
+                  Copyright © 2025 PerryLeo, All rights reserved.
                 </p>
               </div>
               <div class="col-lg-6">
