--- a/about.html
+++ b/about.html
@@ -333,11 +333,8 @@
         <section class="service_details_section section_space section_decoration overflow-hidden">
           <div class="container">
             <div class="item_details_image position-relative">
-              <img src="assets/images/services/service_details_image_1.webp" alt="Project Image">
-              <a class="video_btn" href="https://www.youtube.com/watch?v=7e90gBu4pas">
-                <span class="btn_icon">
-                  <i class="fa-solid fa-play"></i>
-                </span>
+              <img src="assets/images/about-img.jpg" alt="Project Image">
+              
               </a>
             </div>
             <div class="item_details_content">
