--- a/about.html
+++ b/about.html
@@ -360,7 +360,7 @@
                       <span class="iconlist_icon">
                         <img src="assets/images/icons/icon_check.svg" alt="icon Check">
                       </span>
-                      <span class="iconlist_text">Global Reach</span>
+                      <span class="iconlist_text">Nationwide Reach</span>
                     </li>
                     <!-- <li>
                       <span class="iconlist_icon">
@@ -522,7 +522,7 @@
                   <div class="col-lg-6">
                     <p class="heading_description mb-0">
                       Expand your reach and scale your customer base with Perryleo’s smart payment platform—built
-                       to seamlessly connect global businesses with efficiency and speed, minus the excessive costs.
+                       to seamlessly connect nationwide businesses with efficiency and speed, minus the excessive costs.
                     </p>
                   </div>
                   <div class="col-lg-5">
