--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 secure,</div>
               <h1 class="hero_title text-white wow fadeInUp" data-wow-delay=".2s">
                 Seamless
-                <span>Global</span>
+                <span>Nationwide</span>
                 Money Transfers
               </h1>
               <p class="pe-lg-5 text-white wow fadeInUp" data-wow-delay=".3s">
@@ -617,7 +617,7 @@
                   Fast Transfers
                 </h3>
                 <h4 class="funfact_title mb-0">
-                  Send money in minutes, not days. Our lightning-fast system ensures quick delivery worldwide.
+                  Send money in minutes, not days. Our lightning-fast system ensures quick delivery nationwide.
                 </h4>
               </div>
               <div class="funfact_block style_2"
@@ -651,7 +651,7 @@
                   <img src="assets/images/icons/icon_global_search.svg" alt="Icon Global Search">
                 </div>
                 <h3 class="imagebox_title">
-                  Global Reach
+                  Nationwide Reach
                 </h3>
 
                 <h4 class="funfact_title mb-0">
@@ -1432,5 +1432,6 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
