--- a/services.html
+++ b/services.html
@@ -286,9 +286,9 @@
                 <div class="col-lg-5">
                   <p class="heading_description mb-0">
                     At Perryleo, we empower large-scale enterprises with intelligent, seamless, 
-                    and cost-effective global payment solutions. Our platform is designed to enhance efficiency, 
+                    and cost-effective payment solutions. Our platform is designed to enhance efficiency, 
                     improve cash flow, and optimize international transactions, 
-                    ensuring that your business operates smoothly across borders.
+                    ensuring that your business operates smoothly.
                   </p>
                 </div>
               </div>
@@ -313,7 +313,7 @@
                     Fast Transfers
                   </h3>
                   <h4 class="funfact_title mb-0">
-                    Send money in minutes, not days. Our lightning-fast system ensures quick delivery worldwide.
+                    Send money in minutes, not days. Our lightning-fast system ensures quick delivery nationwide.
                   </h4>
                 </div>
                 <div class="funfact_block style_2" style="background-image: url('assets/images/shapes/funfact_bg_2.svg');">
@@ -344,7 +344,7 @@
                     <img src="assets/images/icons/icon_global_search.svg" alt="Icon Global Search">
                   </div>
                   <h3 class="imagebox_title">
-                    Global Reach
+                    Nationwide Reach
                   </h3>
     
                   <h4 class="funfact_title mb-0">
@@ -403,11 +403,11 @@
                     <div class="service_content">
                       <h3 class="service_title">
                         <a href="service_details.html">
-                          Cross-Border Payments
+                          Nationwide Payments
                         </a>
                       </h3>
                       <p>
-                        Effortlessly send and receive payments in multiple currencies across the globe. Our platform ensures:
+                        Effortlessly send and receive payments in multiple currencies across the nation. Our platform ensures:
                       </p>
                       <a class="btn-link" href="service_details.html">
                         <span class="btn_label">Read More</span>
@@ -768,4 +768,5 @@
     <script src="assets/js/main.js"></script>
 
   </body>
+
 </html>
