--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="Seamless Global Money Transfers and online payment">
     <meta name="author" content="djeffsource">
 
-    <title>Online Banking – PerryLeo – Breaking borders, one payment at a time.</title>
+    <title>PerryLeo – Breaking borders, one payment at a time.</title>
     <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
 
     <!-- Fraimwork - CSS Include -->
@@ -340,7 +340,7 @@
             <div class="item_details_content">
               
 
-              <h3 class="item_details_info_heading">Perryaleo's vision</h3>
+              <h3 class="item_details_info_heading">Perryleo's vision</h3>
               <p>
                 To transform lives with trusted financial services that transcend borders. We accomplish our vision
                  by relentlessly focusing on culture. Patient is the key of success.
