--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="Seamless Global Money Transfers and online payment">
   <meta name="author" content="djeffsource">
 
-  <title>Online Banking – PerryLeo – Breaking borders, one payment at a time.</title>
+  <title>PerryLeo – Breaking borders, one payment at a time.</title>
   <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
 
   <!-- Fraimwork - CSS Include -->
@@ -1072,9 +1072,9 @@
                           </div>
                         </div>
                         <p class="review_comment mb-0">
-                          "Switching to PerryLeo online banking has been amazing. The seamless interface makes managing
+                          "Switching to PerryLeo has been amazing. The seamless interface makes managing
                           finances effortless. Whether tracking, paying bills, or transferring funds, Finto exceeds
-                          expectations. Highly recommended for anyone seeking a reliable banking solution."
+                          expectations. Highly recommended for anyone seeking a reliable financial services."
                         </p>
                       </div>
                     </div>
@@ -1435,3 +1435,4 @@
 
 
 </html>
+
