--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="Seamless Global Money Transfers and online payment">
     <meta name="author" content="djeffsource">
 
-    <title>Online Banking – PerryLeo – Breaking borders, one payment at a time.</title>
+    <title>PerryLeo – Breaking borders, one payment at a time.</title>
     <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
 
     <!-- Fraimwork - CSS Include -->
@@ -770,3 +770,4 @@
   </body>
 
 </html>
+
