--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
               style="background-image: url('assets/images/shapes/shape_pattern_3.svg');">
               <div class="site_logo text-center">
                 <a class="site_link" href="index.html">
-                  <img src="assets/images/site_logo/is_logo.svg" alt="Site Logo White">
+                  <img src="assets/images/site_logo/site_logo_black.png" alt="Site Logo White">
                 </a>
               </div>
               <div class="row justify-content-center text-center">
@@ -1435,3 +1435,4 @@
 
 
 </html>
+
