--- a/index.html
+++ b/index.html
@@ -210,34 +210,11 @@
                 </li>
               </ul>
             </div>
-            <!-- my cureency converter start -->
+            <!-- my cureency converter start --> <!-- now ad display -->
             <div class="currency-converter-container">
               <div class="currency-converter">
-                <h3>Currency Converter</h3>
-                <form id="converter-form" onsubmit="event.preventDefault()">
-                  <label for="fromCurrency">From:</label>
-                  <div class="custom-dropdown">
-                    <button id="toButton" class="dropdown-btn">Select Currency</button>
-                    <div id="toDropdown" class="dropdown-content"></div>
-                  </div>
-
-                  <label for="amount">Amount:</label>
-                  <input type="number" id="amount" placeholder="Enter amount" required>
-
-                  <label for="toCurrency">To:</label>
-                  <div class="custom-dropdown">
-                    <button id="fromButton" class="dropdown-btn">Select Currency</button>
-                    <div id="fromDropdown" class="dropdown-content"></div>
-                  </div>
-
-                  <button type="button" onclick="convertCurrency()" id="convertBtn">
-                    <span class="btn-text">Convert</span>
-                    <div class="spinner"></div>
-                  </button>
-                  <!-- <button type="button" onclick="convertCurrency()">Convert</button> -->
-                </form>
-
-                <div id="result"></div>
+                <div>
+                  <img src="https://perryleo.com/more_assets/images/perry-ad.png" alt="Description of the image">
               </div>
             </div>
           </div>
@@ -1435,4 +1412,5 @@
 
 
 </html>
+
 
